--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,14 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% block head %}{% endblock head %}
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{% block title %}{% endblock title %}</title>
+    {% block head %}{% endblock head %}
 </head>
 <body>
-{% block content %}
 
+{% block content %}
 {% endblock content %}
+
 </body>
 </html>
