--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
@@ -11,25 +10,8 @@
     {% block head %}{% endblock head %}
 </head>
 <body>
-<div class="topnav">
-        <a href="/">Главная</a>
-        <a href="#">Контакты</a>
-        <a href="/feedback">Обратная связь</a>
-        <a href="/map">Найди нас на карте</a>
-        {% if user.is_authenticated %}
-            <div class="personal">
-                <a href="#">{{ user.username }}</a>
-                <a href="{% url 'users:logout' %}">Выйти</a>
-            </div>
-        {% else %}
-            <div class="personal">
-                <a href="{% url 'users:registration' %}">Регистрация</a>
-                <a href="{% url 'users:login' %}">Авторизация</a>
-            </div>
-        {% endif %}
-    </div>
+{% include 'src/_navbar.html' %}
 {% block content %}
 {% endblock content %}
-
 </body>
 </html>
