--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -3,7 +3,7 @@
 
 {% block head %}
 
-    <link rel="stylesheet" href="{% static 'css/authorization.css' %}">
+    <link rel="stylesheet" href="{% static 'css/registration/authorization.css' %}">
 {% endblock head %}
 {% block title %}Log in/Sign up screen animation{% endblock title %}
 
