--- a/templates/crud/home.html
+++ b/templates/crud/home.html
@@ -17,9 +17,6 @@
         <button><a href="{% url 'crud:create' %}">Добавить</a></button>
     </li>
     <li>
-        <button><a href="{% url 'shop:home' %}">Изменить</a></button>
-    </li>
-    <li>
-        <button><a href="{% url 'shop:home' %}">Удалить</a></button>
+        <button><a href="{% url 'shop:home' %}">Список всех товаров</a></button>
     </li>
 {% endblock content %}
