--- a/templates/src/_container_home.html
+++ b/templates/src/_container_home.html
@@ -15,13 +15,13 @@
             <div class="banners-splash row text-uppercase text-center center-block">
                 <div class="col-6-24">
                     <div class="banners-splash-wrapper">
-                        <a href="/ge/для женщин" class="center-block banner-splash-img js-banner-splash-img js-track-me"
+                        <a href="#" class="center-block banner-splash-img js-banner-splash-img js-track-me"
                            data-tracking-action="women" data-tracking-label="go to yoox"
                            data-enhanced-pagename="splash_page" data-enhanced-slot="imageBanner_1"
                            data-enhanced-url="https://www.yoox.com/images/yoox80/banners/5569_25_splash_W.jpg?634485886569255397">
                             <img src="https://www.yoox.com/images/yoox80/banners/5569_25_splash_W.jpg?634485886569255397">
                         </a>
-                        <a href="/ge/для женщин"
+                        <a href="#"
                            class="center-block js-banner-splash-label font-bold bg-secondary js-track-me"
                            data-tracking-action="women" data-tracking-label="go to yoox">
                             <span class="text-size-l">ДЛЯ ЖЕНЩИН</span>
@@ -43,7 +43,7 @@
                            data-enhanced-url="https://www.yoox.com/images/yoox80/banners/5569_24_splash_M.jpg?634485886569255397">
                             <img src="https://www.yoox.com/images/yoox80/banners/5569_24_splash_M.jpg?634485886569255397">
                         </a>
-                        <a href="/ge/для мужчин"
+                        <a href="#"
                            class="center-block js-banner-splash-label font-bold bg-secondary js-track-me"
                            data-tracking-action="men" data-tracking-label="go to yoox">
                             <span class="text-size-l">ДЛЯ МУЖЧИН</span>
@@ -59,13 +59,13 @@
                 </div>
                 <div class="col-6-24">
                     <div class="banners-splash-wrapper">
-                        <a href="/ge/для детей" class="center-block banner-splash-img js-banner-splash-img js-track-me"
+                        <a href="#" class="center-block banner-splash-img js-banner-splash-img js-track-me"
                            data-tracking-action="kids" data-tracking-label="go to yoox"
                            data-enhanced-pagename="splash_page" data-enhanced-slot="imageBanner_3"
                            data-enhanced-url="https://www.yoox.com/images/yoox80/banners/5569_19_splash_K.jpg?634485886569255397">
                             <img src="https://www.yoox.com/images/yoox80/banners/5569_19_splash_K.jpg?634485886569255397">
                         </a>
-                        <a href="/ge/для детей"
+                        <a href="#"
                            class="center-block js-banner-splash-label font-bold bg-secondary js-track-me"
                            data-tracking-action="kids" data-tracking-label="go to yoox">
                             <span class="text-size-l">ДЛЯ ДЕТЕЙ</span>
@@ -81,14 +81,14 @@
                 </div>
                 <div class="col-6-24">
                     <div class="banners-splash-wrapper">
-                        <a href="/ge/дизайн+искусство"
+                        <a href="#"
                            class="center-block banner-splash-img js-banner-splash-img js-track-me"
                            data-tracking-action="designart" data-tracking-label="go to yoox"
                            data-enhanced-pagename="splash_page" data-enhanced-slot="imageBanner_4"
                            data-enhanced-url="https://www.yoox.com/images/yoox80/banners/5569_17_splash_D.jpg?634485886569255397">
                             <img src="https://www.yoox.com/images/yoox80/banners/5569_17_splash_D.jpg?634485886569255397">
                         </a>
-                        <a href="/ge/дизайн+искусство"
+                        <a href="#"
                            class="center-block js-banner-splash-label font-bold bg-secondary js-track-me"
                            data-tracking-action="designart" data-tracking-label="go to yoox">
                             <span class="text-size-l">ДИЗАЙН+ИСКУССТВО</span>
