--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{% static 'css/registration//authorization.css' %}">
 {% endblock head %}
 {% block title %}Log in/Sign up screen animation{% endblock title %}
@@ -11,9 +11,6 @@
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
-
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-
     <div class="container">
     <div class="frame">
 
@@ -28,28 +25,25 @@
             {% csrf_token %}
             <label for="username">Username</label>
             {{ form.username }}
-            <label  for="password">Password</label>
+            <label for="password">Password</label>
             {{ form.password }}
-            <input type="checkbox" id="checkbox"/>
-            <label for="checkbox"><span class="ui"></span>Keep me signed in</label>
+            <label><input type="checkbox" class="password-checkbox"> Показать/Скрыть пароль</label>
             <div class="btn-animate">
-
                 <button class="btn-signin" type="submit">Sign in</button>
-
-
             </div>
 
         </form>
+
         <div>
             <div class="cover-photo"></div>
             <div class="profile-photo"></div>
             <h1 class="welcome">Приветсвуем</h1>
             <a class="btn-goback">Авторизация прошла успешна</a>
         </div>
-
-
         <div class="forgot">
+
             <a href="#">Forgot your password?</a>
+
         </div>
         <div class="success">
             <svg width="270" height="270" xmlns="http://www.w3.org/2000/svg"
@@ -62,11 +56,9 @@
                 <p> Thanks for signing up! Check your email for confirmation.</p>
             </div>
         </div>
-
     </div>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js'></script>
-
     <script src="{% static 'js/index.js' %}"></script>
 
 {% endblock content %}
